module12/istio/4.sidecar/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sidecar
spec:
  hosts:
    - nginx.cncamp.io
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: nginx
            port:
              number: 80
